# miniwasm

./: Dockerfile  Dockerfile.arm64  Dockerfile.rocksdb  LICENSE  Makefile  README.md  go.mod  go.sum  shared.Dockerfile
.github/config/: .codespellignore
.github/workflows/: build-and-upload.yml  build-darwin-amd64.yml  build-darwin-arm64.yml  build-linux-amd64.yml  build-linux-arm64.yml  docker-indexer.yml  docker.yml  lint.yml  modernize-go.yml  proto.yml  spellcheck.yml  test.yml
app/: abcipp.go  app.go  app_test.go  blocksdk.go  const.go  encoding.go  executor_change.go  genesis.go  getter.go  indexer.go  modules.go  test_helpers.go  upgrade.go
app/ante/: ante.go  minimal.go
app/hook/: wasm.go
app/ibc-hooks/: README.md  ack.go  ack_test.go  common_test.go  expected_keeper.go  hooks.go  message.go  receive.go  receive_test.go  send.go  send_test.go  timeout.go  timeout_test.go  util.go  util_test.go
app/ibc-hooks/contracts/: Cargo.toml  NOTICE  README.md
app/ibc-hooks/contracts/artifacts/: checksums.txt  checksums_intermediate.txt  counter-aarch64.wasm  counter.wasm
app/ibc-hooks/contracts/examples/: schema.rs
app/ibc-hooks/contracts/schema/: counter.json
app/ibc-hooks/contracts/schema/raw/: execute.json  query.json
app/ibc-hooks/contracts/src/: contract.rs  msg.rs  state.rs
app/ibc-middleware/: README.md  ibc_middleware.go  util.go  util_test.go
app/keepers/: bank.go  bank_module.go  bank_msg_server.go  keepers.go  keys.go
app/lanes/: free.go  mev.go  oracle.go
app/params/: proto.go
app/upgrades/: expected_app.go
app/upgrades/v1_1_0/: upgrade.go
app/upgrades/v1_1_1/: upgrade.go
app/upgrades/v1_2_0/: upgrade.go
app/upgrades/v1_2_1/: upgrade.go
app/upgrades/v1_2_5/: upgrade.go
app/upgrades/v1_3_0/: upgrade.go
app/wasmtesting/: common_test.go  stargate_test.go
app/wasmtesting/contracts/: .gitignore  Cargo.toml  README.md  build.rs  mod.rs
app/wasmtesting/contracts/.cargo/: config
app/wasmtesting/contracts/artifacts/: connect.wasm  slinky.wasm
app/wasmtesting/contracts/src/: connect.rs  execute.rs  lib.rs  mod.rs  msgs.rs  query.rs  slinky.rs  state.rs
app/wasmtesting/contracts/src/protos/: slinky.proto
client/docs/: config-cosmwasm.json  config.json
client/docs/swagger-ui/: index.html  swagger-cosmwasm.yaml  swagger.yaml
cmd/minitiad/: config.go  indexer.go  init.go  launch.go  main.go  root.go
contrib/: embed.go
contrib/wasm/: cw721_base.wasm  cw721_metadata_onchain.wasm  ics721_base.wasm
images/private/: Dockerfile
integration-tests/: go.mod  go.sum
integration-tests/e2e/benchmark/: README.md  benchmark_test.go  collector.go  (+2 more)
integration-tests/e2e/benchmark/bench_heavy_state/: Cargo.toml
integration-tests/e2e/benchmark/bench_heavy_state/src/: lib.rs  msg.rs  state.rs
proto/: README.md  buf.gen.pulsar.yaml  buf.md  buf.yaml
proto/npm/: .gitignore  package.json
scripts/: protoc-swagger-gen.sh  protocgen-pulsar.sh  protocgen.sh
x/bank/: module.go
x/tokenfactory/: README.md  autocli.go  module.go
x/wasmextension/: module.go
(+86 files in other folders)
