[package]
name = "connect"
version = "0.0.1"
authors = ["alapc"]
edition = "2021"
description = ""
license = ""
repository = ""
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "2.0.4", features = ["stargate"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
protobuf = { version = "3.4", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-schema = { version = "2.0.4" }

[build-dependencies]
protobuf-codegen = "3.4"
protoc-bin-vendored = "3"
protobuf = { version = "3.4" }
